--- a/hoy.css
+++ b/hoy.css
@@ -49,9 +49,22 @@ body{
     width: 95vw;
     height: 90vh;
     padding: 20px;
-    border: rgba(206, 1, 69, 0.9) 10px ridge;
-
+    border: double 5px;
+    animation: marcohue 10s linear infinite;
+    
 }
+@keyframes marcohue{
+    0%{
+        border-color:   #f66 #fa0  ;    
+    } 
+        
+    50%{        
+        border-color:   #fa0 #f66;    
+    }
+    100%{
+        border-color:   #f66 #fa0  ;    
+    }
+    }
 
 .bancoSaldo{
     height: 20%;
@@ -64,7 +77,7 @@ body{
 .bancoIzquierda{
     flex-basis: 45%;
     height: 100%;
-    background: #ffffff80;
+    background: #ffffff99;
     margin: 5px;
 }
 .bancoIzquierda p{
@@ -73,7 +86,7 @@ body{
     top: 50px;
     left: 50px;
     width: 40vw;
-    text-align: justify;
+    text-align: center;
     font-size: 25px;
     margin: auto;
 }
@@ -81,7 +94,7 @@ body{
 .bancoDerecha{
     flex-basis: 45%;
     height: 100%;
-    background: #ffffff80;
+    background: #ffffff99;
     margin: 5px;
 
 }
