--- a/hoy.css
+++ b/hoy.css
@@ -388,7 +388,25 @@ body{
     box-shadow: black 3px 3px 3px;
     font-weight: bolder;
 }
-    
+/* -----------------------Ejercicio 18 Menu dinámico */
+
+.menuCuerpo{
+    height: 100%;
+    width: 100%;
+}
+.menuSeccion1{
+    position: relative;
+}
+.menuSeccion1 .menuNavigator{
+    position: relative;
+    width: 300px;
+    height: 420px;
+    background: #fff;
+    border-radius: 5px;
+}
+.menuNavigator ul{
+    padding: 0;
+}
 
 
 
