bg de menus blanco

--- a/hoy.css
+++ b/hoy.css
@@ -546,7 +546,7 @@ body{
 /* este es el navigator */
 .menuActivo2
 {
-    background: #ddd;
+    background: rgb(255, 255, 255);
     height: calc(50%);
 
 }
