--- a/hoy.css
+++ b/hoy.css
@@ -431,7 +431,7 @@ body{
 .menuNavigator
 {
     position: relative;
-    width: 300px;
+    width: 250px;
     height: 50px;
     background: #ffbb00;
     border-radius: 5px;
@@ -448,7 +448,7 @@ body{
     top: 0;
     left: 0;
     padding: 0;
-    padding-left: 20px;
+    padding: 50px 0;
     width: 100%;
 }
 .menuNavigator ul li
@@ -503,10 +503,10 @@ body{
     background: #ffffff;
     cursor: pointer;
     border: #000 solid 1px;
-    bottom: 0;
-    left: 20px;
     transition: .5s;
     padding: 5px;
+    top: 10px;
+    right: 0;
     overflow: hidden;
 }
 
@@ -527,14 +527,12 @@ body{
     background: #f00;
     border: #000 solid 5px;
     border-radius: 50%;
-    bottom: 0;
-    left: calc(50% - 30px);
+    top: 5px;
+    right: 5px;
 }
 .menuActivo1::before
 {   
     content: ":::::::::::::::";
-    width: 40px;
-    height: 40px;
 }
 .menuActivo1:hover
 {
@@ -547,7 +545,7 @@ body{
 .menuActivo2
 {
     background: rgb(255, 255, 255);
-    height: calc(50%);
+    height: 90%;
 
 }
 
